tests/ui/error-codes/E0214.rs
fn main() {
    let v: Vec(&str) = vec!["foo"];
    //~^ ERROR E0214
}
